# generative-logIA

./: .gitignore  README.md  pyproject.toml
config/: repository.cfg
src/logia_gen/application/: definitions.py  project.py
src/logia_gen/infrastructure/: settings.py
src/logia_gen/repository/: definitions.py  settings.py
src/logia_gen/repository/driver/: abstract.py  gdrive.py  local.py
src/logia_gen/repository/repo/: abstract.py  storage.py
tokens/: kaggle.json.example
